# ts_admin

backend/: fu-admin.md  guide.md  guide1.md  manage.py  pyproject.toml
backend/apps/business/: admin.py  api.py  apps.py  models.py  schemas.py
backend/apps/engine/: ER.groovy  admin.py  apps.py  models.py  tests.py
backend/apps/engine/core/base/: requester.py  runner.py  validator.py
backend/apps/engine/core/common/: db_executor.py  dispatcher.py  extractor.py  hook_registry.py  logger.py  prepost.py  test.py  validator.py  variables.py
backend/apps/engine/core/http/: requester.py  runner.py
backend/apps/engine/migrations/: 0001_initial.py  0002_rename_testapi_testinterface.py
backend/apps/engine/routers/: __init__.py  project.py  schemas.py  testcase.py  testcase_run.py
backend/apps/engine/utils/: apifox_importer.py
backend/apps/system/: api.py  apps.py  models.py  router.py  schemas.py
backend/apps/system/migrations/: 0001_initial.py
backend/tsadmin/: asgi.py  settings.py  urls.py  wsgi.py
backend/tsadmin/utils/: fu_auth.py  fu_base.py  fu_currentuser.py  fu_file.py  fu_jwt.py  fu_logger.py  fu_middleware.py  fu_request.py
backend/utils/: fu_auth.py  fu_crud.py  fu_exception.py  fu_jwt.py  fu_logger.py  fu_resp.py
